# GreenpointStandiumScraper

./: README.md  dhl_stadium.ics  events.json  generate_dhl_ics.py  pyproject.toml  requirements.txt  test.py  test_events.py
.github/workflows/: update_icl.yml
