[project]
name = "greenpointstandiumscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "ics>=0.7.2",
    "ipython>=9.5.0",
    "jupyter>=1.1.1",
    "playwright>=1.55.0",
    "requests>=2.32.5",
]
